Work on issues background

--- a/src/MEGASync/stalled_issues/gui/ui/StalledIssueHeader.ui
+++ b/src/MEGASync/stalled_issues/gui/ui/StalledIssueHeader.ui
@@ -35,12 +35,7 @@
    <string notr="true"/>
   </property>
   <property name="styleSheet">
-   <string notr="true">#StalledIssueHeader
-{
-	background-color: transparent;
-}
-
-/*********** actionContainer **********/
+   <string notr="true">/*********** actionContainer **********/
 #actionMessageContainer
 {
    border-radius: 4px;
