--- a/src/MEGASync/gui/Resources_light.qrc
+++ b/src/MEGASync/gui/Resources_light.qrc
@@ -139,5 +139,11 @@
         <file alias="red-bell.svg">images/themed/light/red-bell.svg</file>
         <file alias="folder-users-yellow.svg">images/folder-users-yellow.svg</file>
         <file alias="folder-user-disabled.svg">images/folder-user-disabled.svg</file>
+        <file alias="alert-triangle.svg">images/themed/light/alert-triangle.svg</file>
+        <file alias="sync-warning.svg">images/themed/light/sync-warning.svg</file>
+        <file alias="database-warning.svg">images/themed/light/database-warning.svg</file>
+        <file alias="upload-to-mega.png">images/upload-to-mega.png</file>
+        <file alias="upload-to-mega@2x.png">images/upload-to-mega@2x.png</file>
+        <file alias="upload-to-mega@3x.png">images/upload-to-mega@3x.png</file>
     </qresource>
 </RCC>
