--- a/src/MEGASync/gui/Resources_dark.qrc
+++ b/src/MEGASync/gui/Resources_dark.qrc
@@ -135,5 +135,11 @@
         <file alias="red-bell.svg">images/themed/dark/red-bell.svg</file>
         <file alias="folder-users-yellow.svg">images/folder-users-yellow.svg</file>
         <file alias="folder-user-disabled.svg">images/folder-user-disabled.svg</file>
+        <file alias="alert-triangle.svg">images/themed/dark/alert-triangle.svg</file>
+        <file alias="sync-warning.svg">images/themed/dark/sync-warning.svg</file>
+        <file alias="database-warning.svg">images/themed/dark/database-warning.svg</file>
+        <file alias="upload-to-mega.png">images/upload-to-mega.png</file>
+        <file alias="upload-to-mega@2x.png">images/upload-to-mega@2x.png</file>
+        <file alias="upload-to-mega@3x.png">images/upload-to-mega@3x.png</file>
     </qresource>
 </RCC>
