--- a/src/MEGASync/stalled_issues/gui/ui/StalledIssueTab.ui
+++ b/src/MEGASync/stalled_issues/gui/ui/StalledIssueTab.ui
@@ -29,26 +29,32 @@
    <string notr="true"/>
   </property>
   <property name="styleSheet">
-   <string notr="true">QFrame[itsOn=true], QFrame[itsHover=true] 
+   <string notr="true">QFrame[itsOn=true]
 {
     border-radius: 16px; 
     border: none;
     background-color: #ff04101E; /*colorToken.selection-control*/
 }
 
-QFrame[itsOn=true] QLabel, QFrame[itsHover=true] QLabel
+QFrame[itsOn=false][itsHover=true] 
 {
-    color: #ff616366; /*colorToken.text-inverse-accent*/
+    border: none;
+	background-color: transparent;
 }
 
-QFrame[itsOn=false][itsHover=false]
+QFrame[itsOn=false][itsHover=false] 
 {
 	border-radius: 16px;
      border: none;
 	background-color: #ffE4E4E5; /*colorToken.surface-3*/
 }
 
-QFrame[itsHover=false][itsOn=false] QLabel
+QFrame[itsOn=true] QLabel
+{
+    color: #ff616366; /*colorToken.text-inverse-accent*/
+}
+
+QFrame[itsOn=false] QLabel
 {
 	color: #ff616366; /*colorToken.text-secondary*/
 }
